# validibot-shared

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_artifacts.py  test_callback_nonce_contract.py  test_canonicalization.py  test_energyplus_envelopes.py  test_energyplus_models.py  test_evidence_manifest.py  test_fmi_envelopes.py  test_fmi_models.py  test_fmu_envelopes.py  test_fmu_models.py  test_package_init.py  test_portfolio_manager_envelopes.py  test_schematron_envelopes.py  test_schematron_svrl.py  test_shacl_envelopes.py  test_validations_envelopes.py
validibot_shared/: __init__.py  canonicalization.py
validibot_shared/_vendor/: __init__.py  jcs.py
validibot_shared/energyplus/: __init__.py  envelopes.py  models.py
validibot_shared/evidence/: __init__.py  manifest.py
validibot_shared/fmi/: __init__.py  envelopes.py  models.py
validibot_shared/fmu/: __init__.py  envelopes.py  models.py
validibot_shared/portfolio_manager/: __init__.py  envelopes.py
validibot_shared/portfolio_manager/schemas/: expected-buildings-list-v1.schema.json
validibot_shared/schematron/: __init__.py  envelopes.py  svrl.py
validibot_shared/shacl/: __init__.py  envelopes.py
validibot_shared/validations/: artifacts.py  envelopes.py
