[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "validibot-shared"
version = "0.3.0"
description = "Shared library for data interchange between Validibot and validator containers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel McQuillen", email = "daniel@validibot.com" }]
maintainers = [{ name = "Daniel McQuillen", email = "daniel@validibot.com" }]
requires-python = ">=3.10"
keywords = [
    "validibot",
    "validation",
    "energyplus",
    "fmu",
    "simulation",
    "data-interchange",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://validibot.com"
Documentation = "https://docs.validibot.com"
Repository = "https://github.com/danielmcquillen/validibot-shared"
Issues = "https://github.com/danielmcquillen/validibot-shared/issues"

[tool.hatch.build.targets.wheel]
packages = ["validibot_shared"]

[tool.hatch.build.targets.sdist]
include = [
    "/validibot_shared",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["validibot_shared"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
